src/pages/ar-ae/v1.12.0/installation/network-options.mdx
---
العنوان: "خيارات الشبكة"
metaTitle: "خيارات الشبكة"
metaDescription: "البرنامج المساعد لخيارات الشبكة ل OpenReplay."
---
استيراد جانبي من '~/components/Aside.astro'

تصف هذه الصفحة نطاق `network` من برنامج تشغيل الجافا ل OpenReplay [options] (/sdk/constructor). يتعلق ذلك بالتقاط طلبات الشبكة مثل `fetch` و `XHR`، بما في ذلك الحزم إذا لزم الأمر، وفحصها لاحقًا أثناء تشغيل تسجيلات الجلسة. هذا من شأنه أن يكون مفيدًا جدًا لفهم وإصلاح المشاكل.

## خيارات

- `failuresOnly`: يقوم بالتقاط الطلبات التي تحتوي على رمز HTTP بين 4xx و 5xx. الافتراضي: `false`.
- `sessionTokenHeader`: في حالة تمكين بعض من تكاملات الخلفية لدينا [integrations] (/integrations) (أي Sentry)، يمكنك استخدام هذا الخيار لتحديد اسم الرأس (أو تنشيط الرأس الافتراضي 'X-OpenReplay-SessionToken' عن طريق وضع الخيار إلى `true`). يتم إضافة هذا الآخر تلقائيًا إلى كل طلب fetch/XHR لتحتوي على قيمة OpenReplay sessionToken. الافتراضي: `false`.
- `ignoreHeaders`: يساعد على تحديد قائمة من الرؤوس التي لا ترغب في التقاطها. قم بتعيين قيمته إلى `false` للتقاط كلها (`true` إذا لم يكن لديك أي). الافتراضي: `['Cookie', 'Set-Cookie', 'Authorization']` حتى لن يتم التقاط الرؤوس الحساسة.
- `capturePayload`: يخزن حزم الطلب/الاستجابة. قد يكون هذا مفيدًا جدًا لأغراض الإصلاح، ولكن يمكن أن يصبح ثقيلًا على استخدام الشبكة إذا كانت تطبيقك تستخدم طلبات Fetch/XHR بشكل واسع. الافتراضي: `false`.

<Aside type="caution">
	التقاط بيانات HTTP قد يضمن بيانات حساسة جدًا (على سبيل المثال كلمات المرور) أو معلومات خاصة التي قد ترسلها أو تستقبلها تطبيقك في طلبات Fetch/XHR أو الاستجابات، لذلك يرجى التأكد من تطهير هذه البيانات باستخدام الخيار `sanitizer` أدناه.
</Aside>

- `captureInIframes`: لتعطيل تتبع الشبكة داخل iFrames. الافتراضي: `true`.
- `axiosInstances`: لتحديد الحالات axios المخصصة للتضمين في التتبع.
- `sanitizer`: تطهير البيانات الحساسة من طلب/استجابة Fetch/XHR أو تجاهل الطلب تمامًا. يمكنك تصحيح الحقول في كائن الطلب عن طريق تعديلها ثم إعادة تحويلها من الدالة (انظر الأمثلة أدناه). يتم تطبيق التطهير **بعد** كل التصفية والتعديلات الناجمة عن الخيارات الأخرى (أي لن يحتوي الوسيط على حزمة الجسم إذا لم يتم تحديد `capturePayload` بوضوح إلى `true`).

## أمثلة

بالأسفل أمثلة على كيفية استخدام الخيار `network`.

### مع NPM

### مع كود جافا سكريبت

لاحظ المتغير/السطر `initOpts` لتعيين الخيار `network`.
```js
network?: {
  failuresOnly: boolean;
  sessionTokenHeader: string | boolean;
  ignoreHeaders: Array<string> | boolean;
  capturePayload: boolean;
  sanitizer: (RequestResponseData) => RequestResponseData | null;
  captureInIframes: boolean;
  axiosInstances: AxiosInstance[];
}
```
